--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,5 +3,7 @@
 @import 'var';
 @import 'mixins';
 @import 'navigation';
-@import 'bar-search'
-
+@import 'bar-search';
+@import 'gallery';
+@import 'product';
+@import 'pay';
